# cyberbard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
locales/: en.yml  ru.yml
src/: application.rs  audio.rs  colors.rs  composition.rs  localstorage.rs  main.rs  map.rs  player.rs  project.rs  scene.rs  settings.rs  source.rs  storage.rs  stream.rs  tag.rs  track.rs
src/audio/: audio.rs  composition.rs  mod.rs  playlist.rs  track.rs
src/gui/: application.rs  composition.rs  events.rs  map.rs  mod.rs  player.rs  playlist.rs  scene.rs  settings.rs  storage.rs  widgets.rs  window.rs
src/storage/: localstorage.rs  mod.rs  source.rs  storage.rs  stream.rs  tag.rs
src/stream/: mod.rs  stream.rs  threadstream.rs  trackstream.rs
