[package]
name = "cyberbard"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
egui_alignments = "0.3.4"
erased-serde = "0.4.9"
id3 = "1.16.3"
image = "0.25.8"
lazy_static = "1.5.0"
rfd = "0.16.0"
rodio = "0.21.1"
serde = {version="1.0.228", features = ["derive", "rc"]}
toml = "0.9.8"
walkdir = "2.5.0"
